chore: add manga detail

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@ body,
   height: 100vh;
   margin: 0;
   padding: 0;
+  user-select: none;
 }
 
 body {
@@ -12,4 +13,30 @@ body {
 
 html.dark {
   color-scheme: dark;
+}
+
+* {
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  scrollbar-width: 6px;
+  scrollbar-color: transparent;
+}
+
+::-webkit-scrollbar {
+  height: 6px;
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(128, 128, 128, 0.2);
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: rgba(128, 128, 128, 0.5);
+  border-radius: 3px;
 }
